--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         .thursday {
             padding: 0px 0px 43px 0px;
         }
+
+        a {
+
+            text-align: center;
+            display: block;
+            margin: 0 auto;
+            font-family: Arial, Helvetica, sans-serif;
+        }
     </style>
 </head>
 
@@ -162,6 +170,7 @@
 
 
     </div>
+    <a href="https://vigorous-poincare-b75418.netlify.app/"> Hosted By GitHub </a>
 
     <script>
 
