Updated Better Code for GitHub Link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         }
 
         .link-note {
-            margin: 10px 0px 10px 850px;
+            display: block;
+            text-align: center;
         }
     </style>
 </head>
@@ -178,7 +179,7 @@
         
     <script>
 
-        // Feature 1
+        // Feature 1 margin: 10px 0px 10px 850px;
         //let dateh2 = document.querySelector("#date");
 
         //let now = new Date();
