--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         .weather-temperature img {
             margin-right: 10px;
             margin-bottom: 35px;
-            height 64px;
+            height: 64px;
             width: 64px;
         }
         
