Update Link to GitHub

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <div class="link-note">
         <small>
             
-            <a href="https://vigorous-poincare-b75418.netlify.app/" target="_blank"> Open-Source Code</a> 
+            <a href="https://github.com/lizzyrowe1107/Weather-App" target="_blank"> Open-Source Code</a> 
              by Liz Rowe
         </small>
     </div>
