Tested for Video

--- a/index.html
+++ b/index.html
@@ -370,6 +370,10 @@
         celsiusLink.addEventListener("click", displayCelsiusTemperature);
 
         search("Portland");
+
+        //test
+        
+
     </script>
 
 </body>
